<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgBusinessThumbnail"
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <RatingBar
        android:id="@+id/rtgBarContentRating"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:scaleX=".3"
        android:scaleY=".3"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toEndOf="@+id/imgBusinessThumbnail"
        app:layout_constraintTop_toBottomOf="@+id/txtBusinessTitle" />

    <TextView
        android:id="@+id/txtBusinessTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/defaultBusinessName"
        app:layout_constraintEnd_toEndOf="@+id/rtgBarContentRating"
        app:layout_constraintStart_toEndOf="@+id/imgBusinessThumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtReviewTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:text="@string/reviewCount"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/rtgBarContentRating"
        app:layout_constraintStart_toStartOf="@+id/rtgBarContentRating"
        app:layout_constraintTop_toTopOf="@+id/rtgBarContentRating" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/milage"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtReviewTotal" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/addressDefault"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/rtgBarContentRating"
        app:layout_constraintStart_toStartOf="@+id/rtgBarContentRating"
        app:layout_constraintTop_toTopOf="@+id/rtgBarContentRating" />

    <TextView
        android:id="@+id/txtBusinessType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/defaultBusinessType"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/txtAddress"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/defaultPrice"
        app:layout_constraintEnd_toEndOf="@+id/txtDistance"
        app:layout_constraintTop_toBottomOf="@+id/txtDistance" />
</androidx.constraintlayout.widget.ConstraintLayout>